<resources>
    <string name="app_name">Chaeda</string>
    <string name="statistics_main_introduce">채다 서비스에서 제공하는\n통계 정보들은 아래와 같습니다.</string>
    <string name="statistics_count_title">풀이한 문항 수 비교</string>
    <string name="statistics_count_subtitle">특정 날짜, 주차, 월을 기준으로\n사용자가 풀이한 문제 수를 그래프로 비교합니다.</string>
    <string name="statistics_wrong_title">오답 문항의 세부 개념 비율 정리</string>
    <string name="statistics_wrong_subtitle">특정 주차, 월을 기준으로\n사용자가 틀린 문제들이 주로 어떤 세부 개념에 대한 문항인지\n그래프로 비교합니다.</string>
    <string name="statistics_chapter_title">단원별 풀이한 세부 개념 통계</string>
    <string name="statistics_chapter_subtitle">특정 단원에 포함된 모든 세부 개념에 대해\n풀이한 문제 수 및 오답 수를 그래프로 비교합니다.</string>
    <string name="statistics_detail_comment">각 세부 개념 터치 시 해당 세부 개념에 대한 통계 화면으로 이동합니다.</string>

    <string name="statistics_count_date_comment">선택한 날짜를 포함해\n이전 7일 동안 풀이한 문제 수를 비교합니다.</string>
    <string name="statistics_count_week_comment">선택한 날짜를 포함해\n이전 8주 동안 풀이한 문제 수를 비교합니다.</string>
    <string name="statistics_count_month_comment">선택한 달을 포함해\n이전 6달 동안 풀이한 문제 수를 비교합니다.</string>

    <string name="statistics_wrong_week_comment">선택한 날짜가 포함된 주에\n사용자가 주로 틀린 세부 개념들을 비교합니다.</string>
    <string name="statistics_wrong_month_comment">선택한 달에\n사용자가 주로 틀린 세부 개념들을 비교합니다.</string>

    <string name="statistics_chapter_comment">선택한 단원에\n사용자가 풀이하고 틀린 세부 개념들을 비교합니다.</string>

    <string name="ic_rotate_left_24">반시계 회전</string>
    <string name="ic_rotate_right_24">회전</string>
    <string name="crop_image_menu_crop">자르기</string>
    <string name="ic_flip_24">반전</string>
    <string name="ic_flip_24_horizontally">좌우반전</string>
    <string name="ic_flip_24_vertically">상하반전</string>
    <string name="pick_image_chooser_title">이미지 선택</string>
    <string name="pick_image_camera">카메라로 촬영하기</string>
    <string name="pick_image_gallery">저장된 이미지 읽어오기</string>

</resources>