<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.statistics.StatisticsFragment">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <View
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/appbar_background"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="통계"
            android:fontFamily="@font/nanumsquare_extrabold"
            android:textColor="#683F21"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/background"
            android:layout_marginBottom="12dp"
            />

        <TextView
            android:id="@+id/tv_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_main_introduce"
            android:fontFamily="@font/nanumsquare_bold"
            android:textSize="16sp"
            android:textColor="#683F21"
            app:layout_constraintTop_toBottomOf="@id/background"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="34dp"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:layout_height="1dp"
            android:background="#1A000000"
            app:layout_constraintTop_toBottomOf="@id/tv_introduce"
            />

        <ImageView
            android:id="@+id/iv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_statistics_book"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/tv_introduce"
            android:layout_marginTop="34dp"
            />

        <TextView
            android:id="@+id/tv_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_count_title"
            android:fontFamily="@font/nanumsquare_bold"
            android:textSize="16sp"
            android:textColor="#683F21"
            app:layout_constraintTop_toTopOf="@id/iv_count"
            app:layout_constraintBottom_toBottomOf="@id/iv_count"
            app:layout_constraintStart_toEndOf="@id/iv_count"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tv_count_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_count_subtitle"
            android:fontFamily="@font/nanumsquare_regular"
            android:textSize="13sp"
            android:textColor="#717171"
            app:layout_constraintTop_toBottomOf="@id/tv_count_title"
            app:layout_constraintStart_toStartOf="@id/tv_count_title"
            android:layout_marginTop="8dp"
            />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="34dp"
            android:layout_height="1dp"
            android:background="#1A000000"
            app:layout_constraintTop_toBottomOf="@id/tv_count_subtitle"
            />

        <ImageView
            android:id="@+id/iv_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_statistics_book"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintStart_toStartOf="@id/tv_introduce"
            android:layout_marginTop="34dp"
            />

        <TextView
            android:id="@+id/tv_wrong_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_wrong_title"
            android:fontFamily="@font/nanumsquare_bold"
            android:textSize="16sp"
            android:textColor="#683F21"
            app:layout_constraintTop_toTopOf="@id/iv_wrong"
            app:layout_constraintBottom_toBottomOf="@id/iv_wrong"
            app:layout_constraintStart_toEndOf="@id/iv_wrong"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tv_wrong_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_wrong_subtitle"
            android:fontFamily="@font/nanumsquare_regular"
            android:textSize="13sp"
            android:textColor="#717171"
            app:layout_constraintTop_toBottomOf="@id/tv_wrong_title"
            app:layout_constraintStart_toStartOf="@id/tv_wrong_title"
            android:layout_marginTop="8dp"
            />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="34dp"
            android:layout_height="1dp"
            android:background="#1A000000"
            app:layout_constraintTop_toBottomOf="@id/tv_wrong_subtitle"
            />

        <ImageView
            android:id="@+id/iv_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_statistics_book"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintStart_toStartOf="@id/tv_introduce"
            android:layout_marginTop="34dp"
            />

        <TextView
            android:id="@+id/tv_chapter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_chapter_title"
            android:fontFamily="@font/nanumsquare_bold"
            android:textSize="16sp"
            android:textColor="#683F21"
            app:layout_constraintTop_toTopOf="@id/iv_chapter"
            app:layout_constraintBottom_toBottomOf="@id/iv_chapter"
            app:layout_constraintStart_toEndOf="@id/iv_chapter"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tv_chapter_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_chapter_subtitle"
            android:fontFamily="@font/nanumsquare_regular"
            android:textSize="13sp"
            android:textColor="#717171"
            app:layout_constraintTop_toBottomOf="@id/tv_chapter_title"
            app:layout_constraintStart_toStartOf="@id/tv_chapter_title"
            android:layout_marginTop="8dp"
            />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="34dp"
            android:layout_height="1dp"
            android:background="#1A000000"
            app:layout_constraintTop_toBottomOf="@id/tv_chapter_subtitle"
            />

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_detail_comment"
            android:fontFamily="@font/nanumsquare_regular"
            android:textSize="13sp"
            android:textColor="#717171"
            app:layout_constraintTop_toBottomOf="@id/divider4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="34dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>